firbase config edit json path changed