@@ -1,12 +1,15 @@
 package com.gearup.apigateway.config;
 
 import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.FileInputStream;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 
 import javax.annotation.PostConstruct;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Configuration;
 
@@ -17,6 +20,8 @@ import com.google.firebase.FirebaseOptions;
 @Configuration
 public class FirebaseConfig {
 
+    private static final Logger log = LoggerFactory.getLogger(FirebaseConfig.class);
+
     @Value("${firebase.service-account-json:}")
     private String serviceAccountJson;
 
@@ -26,19 +31,54 @@ public class FirebaseConfig {
     @PostConstruct
     public void init() throws Exception {
         if (FirebaseApp.getApps().isEmpty()) {
+            String envPath = System.getenv("FIREBASE_CONFIG_PATH");
             InputStream is = null;
-            if (serviceAccountPath != null && !serviceAccountPath.isBlank()) {
-                is = new FileInputStream(serviceAccountPath);
-            } else if (serviceAccountJson != null && !serviceAccountJson.isBlank()) {
+
+            if (envPath != null && !envPath.trim().isEmpty()) {
+                File f = new File(envPath);
+                if (f.exists()) {
+                    log.info("Using Firebase service account from environment path: {}", envPath);
+                    is = new FileInputStream(f);
+                } else {
+                    log.warn("FIREBASE_CONFIG_PATH is set but file does not exist: {}", envPath);
+                }
+            }
+
+            if (is == null && serviceAccountPath != null && !serviceAccountPath.isBlank()) {
+                File f = new File(serviceAccountPath);
+                if (f.exists()) {
+                    log.info("Using Firebase service account from configured path: {}", serviceAccountPath);
+                    is = new FileInputStream(f);
+                } else {
+                    log.warn("Configured firebase.service-account-path does not point to an existing file: {}", serviceAccountPath);
+                }
+            }
+
+            if (is == null && serviceAccountJson != null && !serviceAccountJson.isBlank()) {
+                log.info("Using Firebase service account from provided JSON property");
                 is = new ByteArrayInputStream(serviceAccountJson.getBytes(StandardCharsets.UTF_8));
             }
 
-            if (is != null) {
-                GoogleCredentials credentials = GoogleCredentials.fromStream(is);
+            if (is == null) {
+                InputStream cp = FirebaseConfig.class.getClassLoader().getResourceAsStream("firebase-service-account.json");
+                if (cp != null) {
+                    log.info("Using Firebase service account from classpath resource");
+                    is = cp;
+                }
+            }
+
+            if (is == null) {
+                log.info("No Firebase service account found; skipping Firebase initialization.");
+                return;
+            }
+
+            try (InputStream fis = is) {
+                GoogleCredentials credentials = GoogleCredentials.fromStream(fis);
                 FirebaseOptions options = FirebaseOptions.builder()
                         .setCredentials(credentials)
                         .build();
                 FirebaseApp.initializeApp(options);
+                log.info("Firebase initialized successfully.");
             }
         }
     }
